; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/arm/extr_acornscsi.c_acornscsi_readstatusbyte.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/arm/extr_acornscsi.c_acornscsi_readstatusbyte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { %struct.TYPE_9__ }
%struct.TYPE_9__ = type { %struct.TYPE_8__ }
%struct.TYPE_8__ = type { i32 }

@CMND_XFERINFO = common dso_local global i32 0, align 4
@CMND_SBT = common dso_local global i32 0, align 4
@ASR_DBR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"reading status byte\00", align 1
@SBIC_DATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_10__*)* @acornscsi_readstatusbyte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @acornscsi_readstatusbyte(%struct.TYPE_10__* %0) #0 {
  %2 = alloca %struct.TYPE_10__*, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %2, align 8
  %3 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %4 = load i32, i32* @CMND_XFERINFO, align 4
  %5 = load i32, i32* @CMND_SBT, align 4
  %6 = or i32 %4, %5
  %7 = call i32 @acornscsi_sbic_issuecmd(%struct.TYPE_10__* %3, i32 %6)
  %8 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %9 = load i32, i32* @ASR_DBR, align 4
  %10 = load i32, i32* @ASR_DBR, align 4
  %11 = call i32 @acornscsi_sbic_wait(%struct.TYPE_10__* %8, i32 %9, i32 %10, i32 1000, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  %12 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %13 = load i32, i32* @SBIC_DATA, align 4
  %14 = call i32 @sbic_arm_read(%struct.TYPE_10__* %12, i32 %13)
  %15 = load %struct.TYPE_10__*, %struct.TYPE_10__** %2, align 8
  %16 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %17, i32 0, i32 0
  store i32 %14, i32* %18, align 4
  ret void
}

declare dso_local i32 @acornscsi_sbic_issuecmd(%struct.TYPE_10__*, i32) #1

declare dso_local i32 @acornscsi_sbic_wait(%struct.TYPE_10__*, i32, i32, i32, i8*) #1

declare dso_local i32 @sbic_arm_read(%struct.TYPE_10__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
